--- a/Frontend/src/styles/hero.scss
+++ b/Frontend/src/styles/hero.scss
@@ -66,7 +66,7 @@
   overflow: hidden;
   // height: 100vh;
   min-height: 400px;
-  height: 100vh;
+  height: calc(100vh + 50px);
   width: 100vw;
   // max-height: 100vh;
 
